[project]
name = "runpod-real-esrgan"
version = "0.1.0"
description = "RunPod Serverless worker for deploying a TensorRT implementation of Real-ESRGAN"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "runpod>=1.8.1",
]
